// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup should render correctly 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Popup should render correctly without text 1`] = `
<DocumentFragment>
  Hover me
</DocumentFragment>
`;
